Bug 391789 - Uniform Scaling doesn't work using the input boxes on the vector widget
Summary: Uniform Scaling doesn't work using the input boxes on the vector widget
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: Tools (other bugs)
Version First Reported In: git master (please specify the git hash!)
Platform: Appimage Linux
: NOR normal
Target Milestone: ---
Assignee: Dmitry Kazakov
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2018-03-13 01:37 UTC by mvowada
Modified: 2018-03-14 17:49 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
(Video example) (493.09 KB, video/mp4)
2018-03-14 11:05 UTC, mvowada
Details

Note You need to log in before you can comment on or make changes to this bug.
Description mvowada 2018-03-13 01:37:02 UTC
(Krita 4.1.0-pre-alpha (git d0e6714) appimage)

With a vector shape selected on canvas:

    1) enable "Tool Options" > "Geometry" tab > "Uniform Scaling"
    2) type in a different value

Actual Results: it doesn't scale uniformly
Expected results: scale uniformly
Comment 1 Halla Rempt 2018-03-13 09:01:59 UTC
Dmitry, 

Can you check this report?
Comment 2 Dmitry Kazakov 2018-03-14 09:56:41 UTC
Hi, mvowada!

I've just tested, Uniform Scaling works as expected. I guess the problem is in the naming of this option. "Uniform Scaling" doesn't mean that aspect ratio of the shape will be intact, it means that the shape will be **scaled** instead of **resized**, that is, the stroke of the shape will be scaled alongside the size of the shape itself. 

Although we have a note about it in the manual [1], I guess we should rename the option into something more intuitive after the release...

[1] - https://docs.krita.org/Shape_Selection_Tool
Comment 3 mvowada 2018-03-14 11:05:21 UTC
Created attachment 111395 [details]
(Video example)

Thanks for the clear reply. 

I'm sorry, I realize I had not read what the "Uniform Scaling" option was for, making the mistake of confusing it with the "block ratio" function (the chain toggle button).

Revised steps:

     1) 'toggle' the "Tool Options"> "Geometry" tab > chain button, to activate it
     2) type in a different value

I made also a short video to better explain the problem I wanted to report.
Comment 4 Dmitry Kazakov 2018-03-14 15:46:23 UTC
Git commit 9636544a7c051e1a36710e505144ac7098b40dc5 by Dmitry Kazakov.
Committed on 14/03/2018 at 15:42.
Pushed by dkazakov into branch 'master'.

Krita 4.1-only: Rename "Uniform Scaling" into "Scale Styles"

People are confused with the term "uniform scaling", they think
that it is about aspect ratio locking, but it is not.

We cannot push that to 4.0 because of the string freeze, but
we can change that for 4.1

CC:kimageshop@kde.org

M  +1    -1    plugins/tools/defaulttool/defaulttool/DefaultToolGeometryWidget.ui

https://commits.kde.org/krita/9636544a7c051e1a36710e505144ac7098b40dc5
Comment 5 Dmitry Kazakov 2018-03-14 15:47:04 UTC
Okay, I can reproduce the bug in a video
Comment 6 Dmitry Kazakov 2018-03-14 16:17:05 UTC
Git commit 4edb8074b8d04525f8113e4324705eca6806ebd3 by Dmitry Kazakov.
Committed on 14/03/2018 at 16:16.
Pushed by dkazakov into branch 'master'.

Fix aspect locking when resizing the shapes

M  +1    -3    plugins/tools/defaulttool/defaulttool/DefaultToolGeometryWidget.cpp

https://commits.kde.org/krita/4edb8074b8d04525f8113e4324705eca6806ebd3
Comment 7 Dmitry Kazakov 2018-03-14 16:18:21 UTC
The bug should finally be fixed! Thank you for your report, mvowada! :)
Comment 8 mvowada 2018-03-14 16:39:55 UTC
Thank you :)
Comment 9 Halla Rempt 2018-03-14 17:49:03 UTC
Git commit 25082a541af6fc3eaf9ceaf425bc38d4c16f671f by Boudewijn Rempt, on behalf of Dmitry Kazakov.
Committed on 14/03/2018 at 17:48.
Pushed by rempt into branch 'krita/4.0'.

Fix aspect locking when resizing the shapes

M  +1    -3    plugins/tools/defaulttool/defaulttool/DefaultToolGeometryWidget.cpp

https://commits.kde.org/krita/25082a541af6fc3eaf9ceaf425bc38d4c16f671f