Fix aspect locking when resizing the shapes

BUG:391789